# GameDev

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  ATUALIZACAO_DEPENDENCIAS_RESUMO.md  CONTRIBUTING.md  DEPENDENCIAS_ATUALIZADAS.md  Makefile  README.md  README_PT.md  ROADMAP.md  install.bat  install.ps1  install.sh  mypy.ini  opencode.json  ruff.toml  tools.yaml
Animator3D/: LICENSE  README.md  README_PT.md  pyproject.toml
Animator3D/config/: requirements.txt
Animator3D/scripts/: installer.py
Animator3D/tests/: test_bpy_ops.py  test_cli.py
GameAssets/: .gitignore  AGENTS.md  README.md  README_PT.md  TREE.md  activate.sh  pyproject.toml  setup.py
GameAssets/config/: requirements-dev.txt  requirements.txt
GameAssets/debug_minimal/: game.yaml  manifest.yaml  terrain.json
GameAssets/scripts/: installer.py  setup.sh
GameAssets/tests/: test_animated_rules.py  test_batch_guard.py  test_cli.py  test_cli_helpers.py  test_dream_emitter.py  test_dream_llm_context.py  test_dream_planner.py  test_dream_runner.py  test_gameassets_extended.py  test_generation_profiles.py  test_handoff_export.py  test_hw_auto_integration.py  test_manifest.py  test_master_topology_origin.py  test_mesh_reorigin.py  test_param_optimizer.py  test_pipeline_master_profiling.py  test_pipeline_redesign.py  test_profile.py  test_prompt_builder.py  test_resolve_manifest_path.py  test_resume_master.py  test_runner.py  test_simplify_rigged.py  test_smart_defaults.py  test_validator.py
GameDevLab/: README.md  pyproject.toml  requirements-bench.txt
GameDevLab/config/: requirements.txt
GameDevLab/examples/: glb_rules.example.yaml  glb_rules_permissive.yaml
GameDevLab/tests/: test_compare_images.py  test_compare_inspect.py  test_glb_meta.py  test_mesh_inspector.py  test_smoke.py  test_validate_rules.py  test_validate_rules_extended.py
InferenceServer/: README.md  pyproject.toml
InferenceServer/tests/: test_api.py
Materialize/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  README_PT.md  install.sh
Materialize/docs/: README.md  algorithms.md  architecture.md  cli-api.md  features.md  roadmap.md  shaders.md
Materialize/installer/: installer.py
Materialize/src/: analyze.rs  batch.rs  cli.rs  error.rs  gpu.rs  io.rs  main.rs  pipeline.rs  preset.rs
Materialize/tests/: integration_test.rs
Paint3D/: README.md  README_PT.md  pyproject.toml
Paint3D/config/: requirements.txt
Paint3D/docs/: PAINT_SETUP.md  PBR_MATERIALIZE.md
Paint3D/scripts/: apply_hunyuan21_patches.py  install_custom_rasterizer.sh  installer.py  paint_quality_meshes.sh
Paint3D/tests/: test_cli_smoke.py  test_hardware.py  test_hy3d21_paths.py  test_materialize_pbr.py  test_optimizations.py  test_procedural_noise.py  test_quick_bake.py  test_texture_smooth.py  test_unet_quantization.py  test_vertex_pbr.py
Part3D/: =0.45.0  README.md  README_PT.md  pyproject.toml
Part3D/config/: requirements.txt
Part3D/scripts/: installer.py
Part3D/tests/: test_autotune.py  test_cli_smoke.py  test_defaults_unit.py  test_hardware.py
Rigging3D/: .gitignore  LICENSE  README.md  README_PT.md  THIRD_PARTY.md  pyproject.toml
Rigging3D/config/: requirements.txt
Rigging3D/scripts/: install_flash_attn.sh  installer.py  render_skeleton.py  setup.sh
Rigging3D/tests/: test_cli.py  test_extract_paths.py  test_hardware.py  test_logits_processor.py  test_low_vram_skin_config.py  test_rigging_extended.py  test_runner.py  test_stray_mesh_bbox.py
Rocks3D/: LICENSE  README.md  pyproject.toml
Rocks3D/scripts/: installer.py
Rocks3D/tests/: test_bake_bpy.py  test_build.py  test_erosion.py  test_exporter.py  test_formation.py  test_generator.py  test_integration.py  test_texture.py  test_uv_mapping.py
Shared/: AGENTS.md  README.md  README_PT.md  pyproject.toml  setup.py
Shared/config/: install-all-constraints.txt  requirements-dev.txt  requirements.txt
Shared/tests/: test_bpy_mesh.py  test_cli_rich.py  test_env.py  test_gpu.py  test_hardware.py  test_hf.py  test_image_utils.py  test_installer_base.py  test_logging.py  test_lowvram.py  test_mesh_utils.py  test_model_download.py  test_monorepo.py  test_multi_gpu.py  test_multi_gpu_integration.py  test_path_utils.py  test_perfstore.py  test_profiler.py  test_profiler_report.py  test_progress.py  test_quality.py  test_quantization.py  test_registry.py  test_sdnq.py  test_seed_utils.py  test_skill_install.py  test_subprocess_utils.py  test_unified.py  test_vram_monitor.py
Skymap2D/: LICENSE  README.md  README_PT.md  pyproject.toml  setup.py
Skymap2D/config/: requirements-dev.txt  requirements.txt
Skymap2D/scripts/: installer.py  setup.sh
Skymap2D/tests/: test_cli_smoke.py  test_exr_export.py  test_generator.py  test_hardware.py  test_presets.py  test_skymap2d_extended.py  test_utils.py
Terrain3D/: .gitignore  LICENSE  README.md  README_PT.md  THIRD_PARTY.md  pyproject.toml
Terrain3D/config/: requirements.txt
Terrain3D/scripts/: installer.py
Terrain3D/tests/: test_export.py  test_postprocess.py
TerrainGen/: LICENSE  README.md  README_PT.md  pyproject.toml
TerrainGen/scripts/: installer.py
TerrainGen/tests/: test_export.py  test_lakes.py
Text2D/: .gitignore  LICENSE  README.md  README_PT.md  TREE.md  pyproject.toml  setup.py
Text2D/config/: requirements-dev.txt  requirements.txt
Text2D/docs/: INSTALL.md  TROUBLESHOOTING.md
Text2D/scripts/: install.sh  installer.py  run_installer.sh  setup.sh  validate_9b.py
Text2D/tests/: test_batch_manifest.py  test_cli.py  test_cli_integration.py  test_generator_unit.py  test_hardware.py  test_text2d_extended.py
Text2Sound/: .gitignore  LICENSE  README.md  README_PT.md  activate.sh  pyproject.toml  pytest.ini  setup.py
Text2Sound/config/: requirements-dev.txt  requirements-stable-audio-deps.txt  requirements.txt
Text2Sound/scripts/: installer.py  setup.sh
Text3D/: .gitignore  AGENTS.md  LICENSE  README.md  README_PT.md  TREE.md  activate.sh  pyproject.toml  setup.py
Texture2D/: LICENSE  README.md  README_PT.md  TREE.md  activate.sh  pyproject.toml  setup.py
(+1528 files in other folders)
