[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "animator3d"
version = "0.1.0"
description = "CLI de animação 3D com Blender Python (bpy) — complementa Rigging3D"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [{ name = "Animator3D Project" }]
dependencies = [
    "gamedev-shared @ file:../Shared",
    "click>=8.1.0",
    "rich>=13.0.0",
    "rich-click>=1.8.0",
    # PyPI: bpy 5.1.0 wheels só cp313 (alinhado ao Blender 5.1)
    "bpy==5.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "ruff>=0.11.0"]

[project.scripts]
animator3d = "animator3d.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
src = ["src/animator3d"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W"]
