[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gameassets"
version = "0.2.2"
description = "CLI para batches de prompts e assets 2D/3D alinhados ao estilo do jogo"
readme = "README.md"
authors = [{ name = "GameDev" }]
requires-python = ">=3.13"
dependencies = [
    "click>=8.0",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "rich>=13.0",
    "rich-click>=1.8.0",
    "textual>=3.0",
    "Pillow>=10.0",
    "gamedev-shared @ file:../Shared",
    "bpy>=5.1.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.11.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.13",
]

[project.scripts]
gameassets = "gameassets.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gameassets = ["data/*.yaml", "cursor_skill/*.md"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
