[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gamedev-lab"
version = "0.1.0"
description = "CLI de laboratório: debug 3D, bancadas de quantização, profiling e testes"
readme = "README.md"
authors = [{ name = "GameDev" }]
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "rich-click>=1.8.0",
    "Pillow>=10.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "gamedev-shared @ file:../Shared",
]

[project.optional-dependencies]
bench = [
    "torch>=2.1.0",
    "trimesh>=4.0.0",
    "diffusers>=0.30.0",
    "transformers>=4.46.0",
    "huggingface-hub>=0.20.0",
    "safetensors>=0.4.0",
    "optimum-quanto>=0.2.0",
    "bitsandbytes>=0.45.0",
    "sdnq>=0.1.0",
    "einops>=0.8.0",
    "omegaconf>=2.3.0",
    "easydict>=1.10",
    "scikit-image>=0.24.0",
    "addict>=2.4.0",
    # Otimizações VRAM adicionais
    "xformers>=0.0.28",  # Memory efficient attention
    "accelerate>=0.34.0",  # Otimizações de modelo
]
dev = ["pytest>=7.4.0", "ruff>=0.11.0", "trimesh>=4.0.0"]

[project.scripts]
gamedev-lab = "gamedev_lab.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
