[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inference-server"
version = "0.1.0"
description = "API FastAPI para filas de inferência (Text2D, Text3D, Skymap2D, Texture2D) no servidor GPU"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "GameDev" }]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.9",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.10",
]

[project.optional-dependencies]
pipelines = [
    "gamedev-shared @ file:../Shared",
    "text2d @ file:../Text2D",
    "text3d @ file:../Text3D",
    "skymap2d @ file:../Skymap2D",
    "texture2d @ file:../Texture2D",
]
dev = ["pytest>=7.4.0", "ruff>=0.11.0"]

[project.scripts]
inference-server = "inference_server.__main__:main"
inference-client = "inference_server.cli_client:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
