[package]
name = "materialize-cli"
version = "1.0.0"
edition = "2021"
description = "Generate PBR maps from diffuse textures using GPU compute shaders"
license = "MIT"
repository = "https://github.com/maikramer/Materialize-CLI"
readme = "README.md"
keywords = ["pbr", "texture", "normal-map", "gpu", "wgpu"]
categories = ["graphics", "command-line-utilities"]

[dependencies]
wgpu = "29.0"
tokio = { version = "1.0", features = ["full"] }
pollster = "0.3"
futures = "0.3"
image = { version = "0.24", default-features = false, features = ["png", "jpeg", "tga", "exr"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
bytemuck = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3.10"
