[package]
name = "materialize-cli"
version = "2.0.0"
edition = "2024"
rust-version = "1.87"
description = "Generate PBR maps from diffuse textures using GPU compute shaders"
license = "MIT"
repository = "https://github.com/maikramer/Materialize-CLI"
readme = "README.md"
keywords = ["pbr", "texture", "normal-map", "gpu", "wgpu"]
categories = ["graphics", "command-line-utilities"]

[dependencies]
wgpu = "29"
tokio = { version = "1.52", features = ["full"] }
pollster = "0.4"
futures = "0.3"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "tga", "exr"] }
clap = { version = "4.6", features = ["derive"] }
clap_complete = "4.6"
anyhow = "1.0"
bytemuck = { version = "1.25", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
glob = "0.3"
rayon = "1.12"
crossbeam-channel = "0.5"

[dev-dependencies]
tempfile = "3.27"
