[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paint3d"
version = "0.1.0"
description = "Texturização 3D: Hunyuan3D-Paint 2.1 (PBR) + Upscale IA"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "gamedev-shared @ file:../Shared",
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "pytorch-lightning>=2.1.0",
    "diffusers>=0.37.0",
    "transformers>=4.48.0",
    "accelerate>=0.24.0",
    "huggingface-hub>=0.20.0",
    "numpy>=1.26,<2.0",
    "Pillow>=10.0.0",
    "trimesh>=4.0.0",
    "fast-simplification>=0.1.0",
    "imageio>=2.31.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "rich-click>=1.8.0",
    "tqdm>=4.66.0",
    "omegaconf>=2.3.0",
    "opencv-python-headless>=4.8.0,<4.12",
    "pymeshlab>=2022.2",
    "xatlas>=0.0.9",
    "scipy>=1.10.0",
    "bitsandbytes>=0.43.0",
    "bpy==5.1.0",
    # Hunyuan3D-2.1: código vendored em paint3d/hy3dpaint/ (de Tencent-Hunyuan/Hunyuan3D-2.1)
    # Real-ESRGAN (RRDBNet + RealESRGANer): vendored — evita basicsr (pip falha no Python 3.13)
    # nvdiffrast: instalar separadamente com --no-build-isolation (requer PyTorch pré-instalado)
    # pip install git+https://github.com/NVlabs/nvdiffrast.git --no-build-isolation
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
upscale = ["spandrel>=0.4.0"]
dev = ["pytest>=7.4.0", "pytest-cov>=4.0.0", "ruff>=0.11.0"]

[project.scripts]
paint3d = "paint3d.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
