[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "part3d"
version = "0.1.0"
description = "Decomposição semântica de meshes 3D via Hunyuan3D-Part (P3-SAM + X-Part) — optimizado para ~6 GB VRAM"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "torch>=2.1.0",
    "numpy>=1.24.0",
    "trimesh>=4.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "rich-click>=1.8.0",
    "tqdm>=4.66.0",
    "Pillow>=10.0.0",
    "safetensors>=0.4.0",
    "huggingface-hub>=0.20.0",
    "diffusers>=0.30.0",
    "transformers>=4.46.0",
    "easydict>=1.10",
    "pytorch-lightning>=1.9.0",
    "pymeshlab>=2023.12",
    "optimum-quanto>=0.2.0",
    "bitsandbytes>=0.45.0",
    "torchao>=0.10.0; sys_platform != 'darwin'",
    "omegaconf>=2.3.0",      # Necessário para X-Part HF Space
    "einops>=0.8.0",         # Necessário para partformer_dit.py
    "scikit-image>=0.24.0",  # Necessário para surface_extractors (skimage.measure)
    "addict>=2.4.0",         # Necessário para sonata/model.py
    "spconv-cu121>=2.3.0",   # Necessário para sonata (sparse convolution)
    "sdnq>=0.1.0",           # Quantização moderna SDNQ
    "gamedev-shared @ file:../Shared",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "pytest-cov>=4.0.0", "ruff>=0.11.0"]

[project.scripts]
part3d = "part3d.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
