[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gamedev-shared"
version = "0.2.0"
description = "Biblioteca partilhada do monorepo GameDev (logging, GPU, instaladores, CLI, subprocess)"
readme = "README.md"
requires-python = ">=3.13,<3.14"
authors = [{ name = "GameDev" }]
license = "MIT"
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "torch>=2.6.0",
    "rich-click>=1.8.0",
    "bitsandbytes>=0.45.0",
    "torchao>=0.10.0",
    "optimum-quanto>=0.2.0",
    "sdnq>=0.1.0",
    "xformers>=0.0.28; sys_platform != 'darwin'",
    "psutil>=5.9.0",
    "bpy>=5.1.0",
    "Pillow>=10.0.0",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.11.0",
    "mypy>=1.10.0",
    "clified>=0.6.0",
]

[project.scripts]
gamedev-install = "gamedev_shared.installer.unified:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gamedev_shared = ["data/*.yaml"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
