[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "text2d"
version = "0.1.0"
description = "CLI Text-to-2D com FLUX.2 Klein 4B (SDNQ) para GPUs modestas"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Text2D Project" }]
dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "diffusers>=0.37.0",
    "transformers>=4.40.0",
    "accelerate>=0.24.0",
    "huggingface-hub>=0.20.0",
    "safetensors>=0.4.0",
    "sdnq>=0.1.0",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "rich-click>=1.8.0",
    "gamedev-shared @ file:../Shared",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Multimedia :: Graphics",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "pytest-cov>=4.0.0", "ruff>=0.11.0"]

[project.scripts]
text2d = "text2d.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
text2d = ["cursor_skill/*.md"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
