[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "text2sound"
version = "0.1.0"
description = "CLI Text-to-Audio com Stable Audio Open 1.0 — áudio estéreo 44.1 kHz"
readme = "README.md"
authors = [{ name = "Text2Sound Project" }]
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "torch>=2.11.0",
    "torchaudio>=0.16.0",
    "einops>=0.7.0",
    "soundfile>=0.12.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "rich-click>=1.8.0",
    "gamedev-shared @ file:../Shared",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Multimedia :: Sound/Audio",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "pytest-cov>=4.0.0", "ruff>=0.11.0"]

[project.scripts]
text2sound = "text2sound.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
text2sound = ["cursor_skill/*.md"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
