[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "texture2d"
version = "0.1.0"
description = "CLI para geração de texturas 2D seamless via HF Inference API (Flux LoRA)"
readme = "README.md"
authors = [{ name = "Texture2D Project" }]
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "huggingface-hub>=0.24.0",
    "Pillow>=10.0.0",
    "python-dotenv>=1.0.0",
    "click>=8.3.2",
    "rich>=13.0.0",
    "rich-click>=1.8.0",
    "gamedev-shared @ file:../Shared",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Multimedia :: Graphics",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "pytest-cov>=4.0.0", "ruff>=0.11.0"]

[project.scripts]
texture2d = "texture2d.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
texture2d = ["cursor_skill/*.md"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
