[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "texture2d"
version = "0.2.0"
description = "CLI para geração de texturas 2D seamless (tileable) via pattern-diffusion + PBR via Materialize"
readme = "README.md"
authors = [{ name = "Texture2D Project" }]
requires-python = ">=3.13,<3.14"
license = "MIT"
dependencies = [
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "diffusers>=0.31.0",
    "transformers>=4.41.2",
    "accelerate>=0.31.0",
    "huggingface-hub>=0.20.0",
    "safetensors>=0.4.0",
    "torchao>=0.7.0",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "rich-click>=1.8.0",
    "gamedev-shared @ file:../Shared",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Multimedia :: Graphics",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.11.0",
]

[project.scripts]
texture2d = "texture2d.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
texture2d = ["cursor_skill/*.md"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
